--- a/Ecommerce/Backend/package.json
+++ b/Ecommerce/Backend/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.5.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
