export bdd to excel

--- a/Ecommerce/package.json
+++ b/Ecommerce/package.json
@@ -19,15 +19,23 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@grapecity/spread-excelio": "^15.2.1",
+    "@grapecity/spread-sheets": "^15.2.1",
+    "@grapecity/spread-sheets-angular": "^15.2.1",
     "bootstrap": "^5.2.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "mat-file-upload": "^11.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.2.1",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.0.0",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
