--- a/Ecommerce/angular.json
+++ b/Ecommerce/angular.json
@@ -102,6 +102,7 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
+              "node_modules/@grapecity/spread-sheets/styles/gc.spread.sheets.excel2016darkGray.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -109,6 +110,8 @@
         }
       }
     }
+
+    
   },
   "defaultProject": "Ecommerce"
 }
