--- a/Ecommerce/Backend/.env
+++ b/Ecommerce/Backend/.env
@@ -1,2 +1,3 @@
 DB_CONNECTION=mongodb+srv://dicoma:LydZbcUNTUUhuzla@eventsdb.bszfg.mongodb.net/?retryWrites=true&w=majority
 SECRET_TOKEN = fgfghhlgfgfdsxgkuhk
+PORT = 4000
