--- a/Ecommerce/package.json
+++ b/Ecommerce/package.json
@@ -23,13 +23,15 @@
     "@grapecity/spread-excelio": "^15.2.1",
     "@grapecity/spread-sheets": "^15.2.1",
     "@grapecity/spread-sheets-angular": "^15.2.1",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.0",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
     "mat-file-upload": "^11.1.2",
     "mdbootstrap": "^4.20.0",
+    "ngx-owl-carousel-o": "^14.0.1",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
+    "tslib": "^2.4.1",
     "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
