--- a/Ecommerce/package.json
+++ b/Ecommerce/package.json
@@ -24,6 +24,7 @@
     "@grapecity/spread-excelio": "^15.2.1",
     "@grapecity/spread-sheets": "^15.2.1",
     "@grapecity/spread-sheets-angular": "^15.2.1",
+    "angular-credit-cards": "^3.1.9",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.0",
     "exceljs": "^4.3.0",
